--- a/API.Tests/API.Tests.csproj
+++ b/API.Tests/API.Tests.csproj
@@ -88,8 +88,9 @@
       <DependentUpon>CustomerService.feature</DependentUpon>
     </Compile>
     <Compile Include="Services.cs" />
-    <Compile Include="Tests\Controllers\CustomersControllerSteps.cs" />
-    <Compile Include="Tests\Controllers\CustomersControllerSteps2.cs" />
+    <Compile Include="Tests\CustomersControllerSteps.cs" />
+    <Compile Include="Tests\CustomersControllerSteps2.cs" />
+    <Compile Include="Tests\CustomerServiceSteps.cs" />
     <Compile Include="Tests\Infra\ContainerTest.cs" />
     <Compile Include="Tests\Infra\MapperTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -118,9 +119,6 @@
   <ItemGroup>
     <Folder Include="Features\Applications\" />
     <Folder Include="Features\Repositories\" />
-    <Folder Include="Tests\Applications\" />
-    <Folder Include="Tests\Repositories\" />
-    <Folder Include="Tests\Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets')" />
