--- a/API/API.csproj
+++ b/API/API.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Data\Store.cs" />
     <Compile Include="Infra\ContainerConfiguration.cs" />
     <Compile Include="Infra\DependencyResolver.cs" />
+    <Compile Include="Infra\Exceptions\RepositoryException.cs" />
     <Compile Include="Infra\MapperConfiguration.cs" />
     <Compile Include="Infra\WebApiConfig.cs" />
     <Compile Include="Global.asax.cs">
@@ -157,6 +158,7 @@
     <Compile Include="Models\StoreViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Interfaces\ICustomerRepository.cs" />
+    <Compile Include="Services\CustomerService.cs" />
     <Compile Include="Services\Interfaces\ICustomerService.cs" />
     <Compile Include="Services\Interfaces\IDeliveryPersonService.cs" />
     <Compile Include="Services\Interfaces\IDeliveryService.cs" />
