--- a/API.Tests/packages.config
+++ b/API.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
   <package id="Machine.Specifications" version="0.9.0" targetFramework="net45" />
   <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
   <package id="NBuilder" version="3.0.1.1" targetFramework="net45" />
