--- a/API/API.csproj
+++ b/API/API.csproj
@@ -118,9 +118,11 @@
     <Compile Include="Controllers\PizzasController.cs" />
     <Compile Include="Controllers\PizzaSizesController.cs" />
     <Compile Include="Controllers\StoresController.cs" />
+    <Compile Include="Data\BaseEntity.cs" />
     <Compile Include="Data\Context.cs" />
     <Compile Include="Data\Customer.cs" />
     <Compile Include="Data\DeliveryPerson.cs" />
+    <Compile Include="Data\Interfaces\IContext.cs" />
     <Compile Include="Data\Order.cs" />
     <Compile Include="Data\Pizza.cs" />
     <Compile Include="Data\PizzaFlavor.cs" />
@@ -129,7 +131,7 @@
     <Compile Include="Data\Store.cs" />
     <Compile Include="Infra\ContainerConfiguration.cs" />
     <Compile Include="Infra\DependencyResolver.cs" />
-    <Compile Include="Infra\Exceptions\RepositoryException.cs" />
+    <Compile Include="Infra\GuidResolver.cs" />
     <Compile Include="Infra\MapperConfiguration.cs" />
     <Compile Include="Infra\WebApiConfig.cs" />
     <Compile Include="Global.asax.cs">
@@ -157,6 +159,7 @@
     <Compile Include="Models\StoreAddModel.cs" />
     <Compile Include="Models\StoreViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CustomerRepository.cs" />
     <Compile Include="Repositories\Interfaces\ICustomerRepository.cs" />
     <Compile Include="Services\CustomerService.cs" />
     <Compile Include="Services\Interfaces\ICustomerService.cs" />
