--- a/API.Tests/API.Tests.csproj
+++ b/API.Tests/API.Tests.csproj
@@ -85,44 +85,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Features\Controllers\CustomersController.feature.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>CustomersController.feature</DependentUpon>
-    </Compile>
-    <Compile Include="Features\Repositories\CustomerRepository.feature.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>CustomerRepository.feature</DependentUpon>
-    </Compile>
-    <Compile Include="Features\Services\CustomerService.feature.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>CustomerService.feature</DependentUpon>
-    </Compile>
-    <Compile Include="Tests\CustomerRepositorySteps.cs" />
-    <Compile Include="Tests\CustomersControllerSteps.cs" />
-    <Compile Include="Tests\CustomersControllerSteps2.cs" />
-    <Compile Include="Tests\CustomerServiceSteps.cs" />
-    <Compile Include="Tests\Infra\ContainerTest.cs" />
-    <Compile Include="Tests\Infra\MapperTest.cs" />
+    <Compile Include="Controllers\CustomersControllerTests.cs" />
+    <Compile Include="MockDbSet.cs" />
+    <Compile Include="Repositories\CustomerRepositoryTests.cs" />
+    <Compile Include="Services\CustomerServiceTests.cs" />
+    <Compile Include="Infra\ContainerTest.cs" />
+    <Compile Include="Infra\MapperTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests\MockDbSet.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Features\Controllers\CustomersController.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>CustomersController.feature.cs</LastGenOutput>
-    </None>
-    <None Include="Features\Repositories\CustomerRepository.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>CustomerRepository.feature.cs</LastGenOutput>
-    </None>
-    <None Include="Features\Services\CustomerService.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>CustomerService.feature.cs</LastGenOutput>
-    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -134,9 +106,7 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Features\Applications\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets')" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
