--- a/API/API.csproj
+++ b/API/API.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CustomerRepository.cs" />
     <Compile Include="Repositories\Interfaces\ICustomerRepository.cs" />
+    <Compile Include="Services\Constants.cs" />
     <Compile Include="Services\CustomerService.cs" />
     <Compile Include="Services\Interfaces\ICustomerService.cs" />
     <Compile Include="Services\Interfaces\IDeliveryPersonService.cs" />
@@ -169,7 +170,7 @@
     <Compile Include="Services\Interfaces\IPizzaFlavorService.cs" />
     <Compile Include="Services\Interfaces\IPizzaPromoService.cs" />
     <Compile Include="Services\Interfaces\IPizzaService.cs" />
-    <Compile Include="Services\Interfaces\StoreService.cs" />
+    <Compile Include="Services\Interfaces\IStoreService.cs" />
     <Compile Include="Services\Interfaces\IPizzaSizeService.cs" />
   </ItemGroup>
   <ItemGroup>
