--- a/API/Web.config
+++ b/API/Web.config
@@ -73,6 +73,5 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="Context" connectionString="data source=.;initial catalog=PizzaShack;integrated security=True;packet size=8192;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="Context" connectionString="data source=.;initial catalog=PizzaShack;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
