--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -39,10 +39,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Folder Include="app\scripts\services\" />
     <Folder Include="app\styles\" />
     <Folder Include="Properties\" />
-    <Folder Include="test\spec\services\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitattributes" />
@@ -56,6 +54,9 @@
     <Content Include="app\scripts\controllers\about.js" />
     <Content Include="app\scripts\controllers\customers.js" />
     <Content Include="app\scripts\controllers\main.js" />
+    <Content Include="app\scripts\services\apipath.js" />
+    <Content Include="app\scripts\services\customerrepository.js" />
+    <Content Include="app\views\customers.html" />
     <Content Include="app\views\main.html" />
     <Content Include="Content\angular.js" />
     <Content Include="Content\bootstrap.css" />
@@ -63,6 +64,8 @@
     <Content Include="test\karma.conf.js" />
     <Content Include="test\spec\controllers\customers.js" />
     <Content Include="test\spec\controllers\main.js" />
+    <Content Include="test\spec\services\apipath.js" />
+    <Content Include="test\spec\services\customerrepository.js" />
   </ItemGroup>
   <ItemGroup>
     <Content Include=".bowerrc" />
