--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -46,7 +46,7 @@
     <Content Include=".gitignore" />
     <Content Include="app\404.html" />
     <Content Include="app\favicon.ico" />
-    <Content Include="app\images\yeoman.png" />
+    <Content Include="app\images\pizza-chef.png" />
     <Content Include="app\index.html" />
     <Content Include="app\robots.txt" />
     <Content Include="app\scripts\app.js" />
