'Directivized' frontend design, Added BaseData Controller.

--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -51,25 +51,71 @@
     <Content Include="app\robots.txt" />
     <Content Include="app\scripts\app.js" />
     <Content Include="app\scripts\controllers\about.js" />
+    <Content Include="app\scripts\controllers\basedata.js" />
     <Content Include="app\scripts\controllers\customers.js" />
     <Content Include="app\scripts\controllers\deliverypersons.js" />
+    <Content Include="app\scripts\controllers\flavors.js" />
+    <Content Include="app\scripts\controllers\global.js" />
     <Content Include="app\scripts\controllers\main.js" />
+    <Content Include="app\scripts\directives\psaddbutton.js" />
+    <Content Include="app\scripts\directives\psaddmodal.js" />
+    <Content Include="app\scripts\directives\psdeletebutton.js" />
+    <Content Include="app\scripts\directives\psdeletemodal.js" />
+    <Content Include="app\scripts\directives\psdetailsbutton.js" />
+    <Content Include="app\scripts\directives\psdetailsmodal.js" />
+    <Content Include="app\scripts\directives\pseditbutton.js" />
+    <Content Include="app\scripts\directives\pseditmodal.js" />
+    <Content Include="app\scripts\directives\pshamburger.js" />
+    <Content Include="app\scripts\directives\psloading.js" />
+    <Content Include="app\scripts\directives\psnavbar.js" />
+    <Content Include="app\scripts\directives\pstable.js" />
+    <Content Include="app\scripts\directives\pstitle.js" />
     <Content Include="app\scripts\services\apipath.js" />
     <Content Include="app\scripts\services\customerrepository.js" />
     <Content Include="app\scripts\services\deliverypersonrepository.js" />
+    <Content Include="app\scripts\services\flavorrepository.js" />
     <Content Include="app\scripts\services\pingservice.js" />
+    <Content Include="app\scripts\services\statuscodeservice.js" />
     <Content Include="app\styles\site.css" />
+    <Content Include="app\styles\three-quarters.css" />
+    <Content Include="app\styles\throbber.css" />
+    <Content Include="app\styles\wobblebar.css" />
     <Content Include="app\views\customers.html" />
     <Content Include="app\views\deliverypersons.html" />
+    <Content Include="app\views\flavors.html" />
     <Content Include="app\views\main.html" />
+    <Content Include="app\views\psadd.html" />
+    <Content Include="app\views\psaddmodal.html" />
+    <Content Include="app\views\psdeletemodal.html" />
+    <Content Include="app\views\psdetailsmodal.html" />
+    <Content Include="app\views\pseditmodal.html" />
+    <Content Include="app\views\pshamburger.html" />
+    <Content Include="app\views\psloading.html" />
+    <Content Include="app\views\psnavbar.html" />
+    <Content Include="app\views\pstable.html" />
     <Content Include="Content\angular.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Gruntfile.js" />
     <Content Include="test\karma.conf.js" />
+    <Content Include="test\spec\controllers\basedata.js" />
     <Content Include="test\spec\controllers\customers.js" />
+    <Content Include="test\spec\controllers\deliveryperson.js" />
+    <Content Include="test\spec\controllers\flavors.js" />
+    <Content Include="test\spec\controllers\global.js" />
     <Content Include="test\spec\controllers\main.js" />
+    <Content Include="test\spec\directives\psaddmodal.js" />
+    <Content Include="test\spec\directives\psdeletemodal.js" />
+    <Content Include="test\spec\directives\psdetailsmodal.js" />
+    <Content Include="test\spec\directives\pseditmodal.js" />
+    <Content Include="test\spec\directives\pshamburger.js" />
+    <Content Include="test\spec\directives\psloading.js" />
+    <Content Include="test\spec\directives\psnavbar.js" />
     <Content Include="test\spec\services\apipath.js" />
     <Content Include="test\spec\services\customerrepository.js" />
+    <Content Include="test\spec\services\deliverypersonrepository.js" />
+    <Content Include="test\spec\services\flavorrepository.js" />
+    <Content Include="test\spec\services\pingservice.js" />
+    <Content Include="test\spec\services\statuscodeservice.js" />
   </ItemGroup>
   <ItemGroup>
     <Content Include=".bowerrc" />
